# coccoctest-junior

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/algo/: CMakeLists.txt  algo.cc  dimension_command.cc  line_command.cc  move_command.cc
src/execution/: CMakeLists.txt  program_context.cc
src/include/algo/: algo.h  command.h  dimension_command.h  line_command.h  move_command.h
src/include/common/: axis.h  command_data.h
src/include/execution/: program_context.h  state.h
src/include/parser/: parser.h
src/include/renderer/: bitmap.h  console.h  renderer.h
src/main/: CMakeLists.txt  main.cc
src/parser/: CMakeLists.txt  parser.cc
src/renderer/: CMakeLists.txt  bitmap.cc  console.cc  test.cc
test/: test.txt  test1.txt  test2.txt
